--- a/SIGTR/dashboard/static/dashboard/css/admin/admin.css
+++ b/SIGTR/dashboard/static/dashboard/css/admin/admin.css
@@ -469,6 +469,7 @@ div#usuarios {
 }
 div#mapaTech {
     border-radius: 20px;
+    position: sticky !important;
 }
 .contentMapa {
     padding-left: 20px;
