--- a/SIGTR/dashboard/templates/dashboard/admin/admin_inicio.html
+++ b/SIGTR/dashboard/templates/dashboard/admin/admin_inicio.html
@@ -73,7 +73,7 @@
                                 <div class="iconFunction">
                                     <i class="fa-solid fa-desktop"></i>
                                 </div>
-                                <a href="{% url 'product_list' %}" class="textFunction">PRODUCTOS</a>
+                                <a href="{% url 'read_product' %}" class="textFunction">PRODUCTOS</a>
                             </button>
                         </div>
                         <div class="function">
@@ -256,9 +256,11 @@
                             </div>
                         </div>
                         <div class="dataMapa">
-                            <div class="mapa" id="mapaTech">
+                           <div class="contentMap">
+                             <div class="mapa" id="mapaTech">
                                 <!-- Mapa de Leaflet en js-->
                             </div>
+                           </div>
                             <div class="contentTecnico">
                                 <div class="contentSelect">
                                     <div class="infoSelect">
@@ -289,7 +291,7 @@
                                         <div class="tecnicoEstado">
                                             <div class="iconFunction">
                                                 <i class="fa-solid fa-user-gear iconTicketUser"
-                                                    style="color: white; font-size: xxx-large;"></i>
+                                                    style="color: green; font-size: xxx-large;"></i>
                                             </div>
                                         </div>
                                     </div>
