--- a/SIGTR/tickets/templates/tickets/modalAsistencia.html
+++ b/SIGTR/tickets/templates/tickets/modalAsistencia.html
@@ -63,11 +63,11 @@
                     </div>
                 </div>
                 <div class="botonesAsistencia">
-                    <div class="botones"><button type="submit" class="btnAsistencia" id="btnAsistencia">SOLICITAR</button></div>
-                    <!-- <div class="botones">
-                        <a href="https://goo.su/V3JAvi" target="_blank"><i
-                                class="fa-brands fa-whatsapp fa-fade btnAsistencia"></i>CONTACTAR</a> -->
-                        
+                    <div class="botonesOpcion"><button type="submit" class="btnAsistencia" id="btnAsistencia">SOLICITAR</button></div>
+                    <div class="botonesOpcion">
+                        <a href="https://goo.su/V3JAvi" target="_blank" class="btnAsistencia"><i class="fa-brands fa-whatsapp fa-fade"></i>CONTACTAR
+                        </a> 
+                    </div>
                 </div>
                 <input type="hidden" id="id_latitude" name="latitude">
                 <input type="hidden" id="id_longitude" name="longitude">
