--- a/SIGTR/dashboard/static/dashboard/css/notificaciones.css
+++ b/SIGTR/dashboard/static/dashboard/css/notificaciones.css
@@ -10,8 +10,10 @@
     width: 25%;
     max-width: 470px;
 }
-
-.notification.success {
+#notificaciones{
+    display: flex;
+}
+.notification.success, #success {
     background: linear-gradient(90deg, #024b09 0%, rgb(0, 51, 0) 30%, #232631 80%);
     padding: 1em;
     border-radius: 10px;
@@ -19,7 +21,7 @@
     width: 100%;
     border-bottom: #024b09 5px solid;
 }
-.notification.advertencia {
+.notification.advertencia, #advertencia {
     background: linear-gradient(90deg, #d79c04 0%, rgb(104, 71, 0) 30%, #321600 80%);
     padding: 1em;
     border-radius: 10px;
@@ -27,7 +29,7 @@
     width: 100%;
     border-bottom: #d79c04 5px solid;
 }
-.notification.danger {
+.notification.danger, #danger {
     background: linear-gradient(90deg, #9f0202 0%, rgb(58, 0, 0) 30%, #0b0000 80%);
     padding: 1em;
     border-radius: 10px;
