--- a/SIGTR/dashboard/templates/dashboard/base_dashboard.html
+++ b/SIGTR/dashboard/templates/dashboard/base_dashboard.html
@@ -84,20 +84,20 @@
                     </a>
                     <ul class="collapse list-unstyled ps-4" id="productSubmenu">
                         <li>
-                            <a class="nav-link text-white {% if request.resolver_match.url_name == 'product_list' %}active{% endif %}"
-                                 href="{% url 'product_list' %}">
+                            <a class="nav-link text-white {% if request.resolver_match.url_name == 'read_product' %}active{% endif %}"
+                                 href="{% url 'read_product' %}">
                                 <i class="bi bi-list me-2"></i> Listar Productos
                             </a>
                         </li>
                         <li>
-                            <a class="nav-link text-white {% if request.resolver_match.url_name == 'product_create' %}active{% endif %}"
-                                href="{% url 'product_create' %}">
+                            <a class="nav-link text-white {% if request.resolver_match.url_name == 'read_product' %}active{% endif %}"
+                                href="{% url 'read_product' %}">
                                 <i class="fas fa-plus me-2"></i> Cursos
                             </a>
                         </li>
                         <li>
-                            <a class="nav-link text-white {% if request.resolver_match.url_name == 'product_create' %}active{% endif %}"
-                                href="{% url 'product_create' %}">
+                            <a class="nav-link text-white {% if request.resolver_match.url_name == 'read_product' %}active{% endif %}"
+                                href="{% url 'read_product' %}">
                                 <i class="fas fa-plus me-2"></i> Servicios
                             </a>
                         </li>
@@ -115,14 +115,14 @@
                     </a>
                     <ul class="collapse list-unstyled ps-4" id="productSubmenu">
                         <li>
-                            <a class="nav-link text-white {% if request.resolver_match.url_name == 'product_list' %}active{% endif %}"
+                            <a class="nav-link text-white {% if request.resolver_match.url_name == 'read_product' %}active{% endif %}"
                                 href="{% url 'sales_report' %}">
                                 <i class="bi bi-graph-up-arrow me-2"></i> Reporte de Ventas
                             </a>
                         </li>
                         <li>
-                            <a class="nav-link text-white {% if request.resolver_match.url_name == 'product_create' %}active{% endif %}"
-                                href="{% url 'product_create' %}">
+                            <a class="nav-link text-white {% if request.resolver_match.url_name == 'read_product' %}active{% endif %}"
+                                href="{% url 'read_product' %}">
                                 <i class="fas fa-plus me-2"></i> Agregar Venta
                             </a>
                         </li>
@@ -281,6 +281,7 @@
     <script src="{% static 'dashboard/js/admin/categoria.js' %}"></script>
     <script src="{% static 'dashboard/js/admin/cliente.js' %}"></script>
     <script src="{% static 'dashboard/js/admin/tecnico.js' %}"></script>
+    <script src="{% static 'dashboard/js/admin/producto.js' %}"></script>
     {% elif request.user.role == 'client' %}
     <script src="{% static 'dashboard/js/client_dashboard.js' %}" defer></script>
     {% elif request.user.role == 'tech' %}
